--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "migration:run": "npm run typeorm -- migration:run -d ./src/config/data-source.ts",
     "migration:revert": "npm run typeorm -- migration:revert -d ./src/config/data-source.ts",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
-    "migration:show": "npm run typeorm -- migration:show -d ./src/config/data-source.ts"
+    "migration:show": "npm run typeorm -- migration:show -d ./src/config/data-source.ts",
+    "worker:mail": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/workers/email.worker.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +18,13 @@
   "dependencies": {
     "@types/express": "^5.0.3",
     "bcrypt": "^6.0.0",
-    "bullmq": "^5.58.2",
+    "bullmq": "^5.58.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "ioredis": "^5.7.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.5",
     "nodemailer-otp": "^1.0.8",
     "pg": "^8.16.3",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@tsconfig/node12": "^12.1.4",
     "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.1",
     "ts-node": "^10.9.2",
