--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.3",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.58.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "ioredis": "^5.7.0",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^7.0.5",
     "nodemailer-otp": "^1.0.8",
     "pg": "^8.16.3",
@@ -36,8 +41,12 @@
   },
   "devDependencies": {
     "@tsconfig/node12": "^12.1.4",
+    "@types/axios": "^0.9.36",
     "@types/bcrypt": "^6.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
+    "@types/hpp": "^0.2.6",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.1",
     "ts-node": "^10.9.2",
