--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+
+  "$schema": "https://json.schemastore.org/package",
   "name": "mail-service",
   "version": "1.0.0",
   "main": "index.js",
@@ -9,7 +11,8 @@
     "migration:revert": "npm run typeorm -- migration:revert -d ./src/config/data-source.ts",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
     "migration:show": "npm run typeorm -- migration:show -d ./src/config/data-source.ts",
-    "worker:mail": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/workers/email.worker.ts"
+    "worker:mail": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/workers/email.worker.ts",
+    "test": "vitest run"
   },
   "keywords": [],
   "author": "",
@@ -23,15 +26,20 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.1",
+    "connect-timeout": "^1.9.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "i18n": "^0.15.1",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^7.0.5",
     "nodemailer-otp": "^1.0.8",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.16.3",
     "redis": "^5.8.2",
     "reflect-metadata": "^0.2.2",
@@ -45,13 +53,20 @@
     "@types/bcrypt": "^6.0.0",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
+    "@types/express-session": "^1.18.2",
     "@types/hpp": "^0.2.6",
+    "@types/i18n": "^0.13.12",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.1",
+    "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.3",
+    "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   }
 }
