--- a/package.json
+++ b/package.json
@@ -136,6 +136,8 @@
 
     "@types/supertest": "^6.0.3",
 
+    "@types/winston": "^2.4.4",
+
     "supertest": "^7.1.4",
 
     "ts-node": "^10.9.2",
