--- a/mail-server/package.json
+++ b/mail-server/package.json
@@ -2,10 +2,10 @@
   "name": "mail-server",
   "version": "1.0.0",
   "description": "",
-  "scripts": {
-    "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register --transpile-only src/server.ts",
-    "start": "NODE_ENV=production node ./dist/index.js",
-    "build": "tsc -p ."
+"scripts": {
+  "dev": "NODE_ENV=development ts-node-dev --respawn --transpile-only src/worker.ts",
+  "build": "tsc -p .",
+  "start": "NODE_ENV=production node ./dist/worker.js"
   },
   "keywords": [],
   "author": "canozge001@gmail.com",
